# semantic_tensor_memory

./: .gitignore  AGENTS.md  CHAT_ANALYSIS_GUIDE.md  DUAL_EMBEDDING_INNOVATION.md  ENHANCED_CONCEPT_ANALYSIS_SUMMARY.md  IMPROVEMENT_PLAN.md  LLAMACPP_UI_GUIDE.md  README.md  REFACTORING_SUMMARY.md  RIDGELINE_ENHANCEMENT_SUMMARY.md  RIDGELINE_SCALING_FIXES.md  SDR_INNOVATION_SUMMARY.md  SEMANTIC_UPGRADE_SUMMARY.md  STM_FEATURE_AUDIT_AND_PLAN.md  WORK_SUMMARY.md  aba_therapy_dataset.csv  alternative_dimensionality.py  app.py  app_backup.py  app_backup_fixed.py  app_broken.py  chat_analysis.py  chat_history_analyzer.py  chat_large_file_processor.py  conftest.py  demo.py  demo_universal_stm.py  explainability_engine.py  finance_notes.csv  finance_notes_expanded.csv  jordans_notes_expanded.csv  load_demo_data.py  memory_meta.json  memory_tensor.pt  performance_optimizer.py  pyproject.toml  requirements.txt  sample_chat_history.txt  sdr_demo_dataset.csv  semantic-tensor-memory.aux  (+13 more)
.github/workflows/: tests.yml
analysis/: concept_analysis.py
archive/: ANIMATION_ENHANCEMENT_SUMMARY.md  CHAT_ANALYSIS_GUIDE.md  DYNAMIC_CATEGORIES_UPDATE.md  ENHANCED_ANALYSIS_README.md  ENHANCED_CONCEPT_ANALYSIS_SUMMARY.md  UNIVERSAL_MULTIMODAL_STM.md
archive/legacy_embedders/: dual_embedder.py  embedder_sbert.py  holistic.py  river.py
data/: alexb_notes.csv  demo_dataset.csv  jordans_notes.csv  long_aba_dataset.csv  ultimate_demo_dataset.csv
data/universal/: session_000000_text.pkl  session_000001_text.pkl  session_000002_text.pkl  session_000003_text.pkl  session_000004_text.pkl
docs/: QUICKSTART_LLAMACPP.md  STM_Paper_v2.tex  semantic-tensor-memory.tex
examples/: aba_progress.ipynb  finance_narrative.ipynb
memory/: __init__.py  drift.py  dual_embedder.py  embedder.py  embedder_cls.py  embedder_config.py  embedder_hybrid.py  embedder_sbert.py  text_embedder.py  universal_core.py  vision_embedder.py
semantic_tensor_memory/app/: config.py  data_ingestion.py  main.py  models.py  sidebar.py
src/semantic_tensor_analysis/: __init__.py
tests/: conftest.py  test_app_integration.py  test_concept_analysis.py  test_dual_embedding.py  test_embedding_comparison.py  test_llama_cpp_integration.py  test_semantic_upgrade.py  test_storage_manager.py  test_universal_system.py
visualization/: concept_visualizer.py
viz/: __init__.py  heatmap.py  holistic_semantic_analysis.py  pca_plot.py  semantic_drift_river.py
(+127 files in other folders)
