[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-tensor-memory"
version = "0.1.0"
description = "Universal Multimodal Semantic Tensor Memory toolkit."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Semantic Tensor Memory Contributors" }]
dependencies = [
    "torch>=2.2,<2.5",
    "transformers==4.*",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
    "streamlit>=1.32.0,<1.40.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "altair>=5.0.0,<6.0.0",
    "umap-learn>=0.5.3",
    "psutil>=5.9.0",
    "Pillow>=10.0.0",
    "networkx>=3.0",
]

[project.urls]
Homepage = "https://github.com/semantic-tensor-memory"

[tool.setuptools.packages.find]
where = ["src"]
include = ["semantic_tensor_memory*"]

[tool.setuptools.package-data]
"semantic_tensor_memory" = []
