[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-tensor-analysis"
version = "0.1.0"
description = "Temporal semantic evolution analysis framework for tracking meaning across time, tokens, and context."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Semantic Tensor Analysis Contributors" }]
dependencies = [
    "torch>=2.2,<2.5",
    "transformers==4.*",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
    "streamlit>=1.32.0,<1.40.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "altair>=5.0.0,<6.0.0",
    "umap-learn>=0.5.3",
    "psutil>=5.9.0",
    "Pillow>=10.0.0",
    "networkx>=3.0",
    "llama-cpp-python[server]>=0.2.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
file-browser = [
    "streamlit-file-browser>=0.2.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.15",
]
tests = [
    "pytest>=9.0.0",
    "pytest-timeout>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/semantic-tensor-analysis"

[tool.setuptools.packages.find]
where = ["src"]
include = ["semantic_tensor_analysis*"]

[tool.setuptools.package-data]
"semantic_tensor_analysis" = []
